# websocket_connect

./: .gitignore  CMakeLists.txt  CMakePresets.json  ProjectOptions.cmake  conanfile.py  main.cxx
src/: CMakeLists.txt  hello.cxx  hello.hxx
test/: CMakeLists.txt  hello.cxx
